chore: remove deprecation warnings

--- a/roles/skaffold/tasks/main.yml
+++ b/roles/skaffold/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.get_url:
     url: https://github.com/{{ repo }}/releases/download/v{{ version }}/skaffold-{{ platform }}
     dest: /usr/local/bin/skaffold
-    sha256sum: "{{ checksum }}"
+    checksum: sha256:"{{ checksum }}"
     mode: 0644
   tags:
     - kubernetes
