--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -39,6 +39,7 @@
       - docker
       - docker-engine
       - docker.io
+      - docker-compose
     state: absent
   tags:
     - container
@@ -48,7 +49,10 @@
   ansible.builtin.apt:
     name:
       - docker-ce
-      - docker-compose
+      - docker-ce-cli
+      - docker-ce-rootless-extras
+      - docker-buildx-plugin
+      - docker-compose-plugin
     state: latest
     update_cache: "{{ apt_repo.changed }}"
   tags:
