--- a/roles/gcloud/tasks/main.yml
+++ b/roles/gcloud/tasks/main.yml
@@ -2,10 +2,22 @@
 - name: "Kubernetes | gcloud :: repository key"
   ansible.builtin.get_url:
     url: "{{ apt.key }}"
-    dest: "{{ keyrings_dir }}/{{ apt.name }}.gpg"
+    dest: "{{ keyrings_dir }}/{{ apt.name }}.asc"
+    checksum: sha256:{{ apt.sha256 }}
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
+  register: key_asc
+  tags:
+    - kubernetes
+    - gcloud
+
+- name: "Kubernetes | gcloud :: repository key dearmor"
+  ansible.builtin.command:
+    cmd: gpg --dearmor --output {{ apt.name }}.gpg {{ apt.name }}.asc
+    chdir: "{{ keyrings_dir }}"
+    creates: "{{ apt.name }}.gpg"
+  when: key_asc.changed
   tags:
     - kubernetes
     - gcloud
