--- a/roles/syncthing/tasks/main.yml
+++ b/roles/syncthing/tasks/main.yml
@@ -3,6 +3,7 @@
   ansible.builtin.get_url:
     url: "{{ apt.key }}"
     dest: "{{ keyrings_dir }}/{{ apt.name }}.gpg"
+    checksum: sha256:{{ apt.sha256 }}
     owner: root
     group: root
     mode: 0644
