--- a/roles/vscode/vars/main.yml
+++ b/roles/vscode/vars/main.yml
@@ -1,6 +1,7 @@
 ---
 apt:
   key: https://packages.microsoft.com/keys/microsoft.asc
+  sha256: 2cfd20a306b2fa5e25522d78f2ef50a1f429d35fd30bd983e2ebffc2b80944fa
   name: vscode
   url: https://packages.microsoft.com/repos/vscode
   suite: stable
